tests/should_fail/chained_compare.nds
-- Comparison operators are non-associative.
set x to 1 = 2 = 3
